# chip8-emulator

./: CMakeLists.txt  README.md
src/: CPU.cpp  CPU.h  Main.cpp  Main.h
